# aoc_2020

./: Cargo.toml  run.sh
answer/: day1-part2.txt  day13-part2.txt  day16-part2.txt  day18-part1.txt  day3-part2.txt  day9-part1.txt  day9-part2.txt
input/: temp.txt
src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15-2015.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs  util.rs
