[package]
name = "aoc_2020"
version = "0.1.0"
authors = ["PowerSnail <hj@powersnail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
regex = "1"
lazy_static = "1.4.0"
num = "0.3.1"
itertools = "0.9.0"

[profile.release]
lto = true